@@ -20,7 +20,7 @@ bundledPrograms :: [FilePath]
 bundledPrograms = catMaybes
 	[ Nothing
 #ifndef mingw32_HOST_OS
-	-- git is not included in the windows bundle
+	-- git is not included in the windows bundle; msysgit is used
 	, Just "git"
 	-- Not strictly needed in PATH by git-annex, but called
 	-- by git when it sshes to a remote.
@@ -31,13 +31,17 @@ bundledPrograms = catMaybes
 	, Just "cp"
 #ifndef mingw32_HOST_OS
 	-- using xargs on windows led to problems, so it's not used there
+	-- (and msysgit includes a copy anyway)
 	, Just "xargs"
 #endif
 	, Just "rsync"
 #ifndef darwin_HOST_OS
+#ifndef mingw32_HOST_OS
 	-- OS X has ssh installed by default.
-	-- (Linux probably, but not guaranteed.)
+	-- Linux probably has ssh, but not guaranteed.
+	-- On Windows, msysgit provides ssh, but not ssh-keygen.
 	, Just "ssh"
+#endif
 	, Just "ssh-keygen"
 #endif
 #ifndef mingw32_HOST_OS
